# FIXT

./: .gitignore  Acceptor.cpp  Acceptor.h  CMakeLists.txt  FIXServer.cpp  FIXServer.h  README.md  Service.cpp  Service.h  main.cpp  sonar-project.properties
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  client.cpp
include/: Acceptor.h
src/: CMakeLists.txt  main.cpp
